# healthcare-diabetes-dashboard

./: .gitignore  AI_CONTEXT_GAPS.md  AI_PROJECT_CONTEXT.md  APIs.md  Dockerfile  README.md  USERS.json  case_schema_models.py  docker-compose.yml  final-dashboard.html  implementation_guide.md  pyproject.toml  pytest.ini  requirements.txt
docs/: ai.md  assignments.md  case_models.md  dashboards.md  diabetes_dashboard.md  doctor_dashboard_api_updates.md  frontend_report_upload_by_doctors.md  notifications.md  project_workflow_diagrams.md  reports.md
docs/architecture/: AI_AGENTIC_FLOW.md
frontend/: V0_PROMPT.md
manual_testing/: test-reports
notes/: cases_usecase.md
src/: api.py  logging.py  main.py
src/ai/: __init__.py  controller.py  gemini_client.py  ml_models.py  models.py  services.py  text_analysis.py  tools.py
src/appointments/: __init__.py  controller.py  models.py  services.py
src/assignments/: controller.py  models.py  services.py
src/auth/: controller.py  models.py  services.py
src/cases/: controller.py  models.py  services.py
src/dashboards/: __init__.py  analytics.py  analytics_models.py  controller.py  models.py  services.py  task.md
src/database/: core.py  mongo.py  supabase.py  supabase_sql.sql
src/documents/: __init__.py  controller.py  models.py  services.py
src/ml_model/: diabetes_xgboost_model.json  how_to_run.py  input_output.md
src/notifications/: __init__.py  controller.py  models.py  services.py
src/reports/: controller.py  models.py  services.py
src/schemas/: cases.py  mongo.py  notifications.py  reports.py
src/schemas/users/: users.py
src/sharing/: __init__.py  controller.py  models.py  services.py
src/tasks/: worker.py
src/users/: controller.py  models.py  services.py
tests/: test-1
