[project]
name = "healthcare-diabetes-dashboard"
version = "0.1.0"
description = "Healthcare and Diabetes Dashboard - A FastAPI backend for managing healthcare data and diabetes monitoring"
authors = [
    {name = "solvablehat"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # FastAPI Core
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "starlette==0.50.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydantic-extra-types==2.10.6",

    # ASGI Servers & Tools
    "uvloop==0.22.1",
    "httptools==0.7.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "python-multipart==0.0.21",

    # HTTP & Networking
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "anyio==4.12.0",
    "requests==2.32.5",
    "urllib3==2.6.2",
    "certifi==2025.11.12",
    "idna==3.11",
    "charset-normalizer==3.4.4",

    # Database - Supabase
    "supabase==2.27.0",
    "supabase-auth==2.27.0",
    "supabase-functions==2.27.0",
    "postgrest==2.27.0",
    "storage3==2.27.0",
    "realtime==2.27.0",

    # Database - MongoDB
    "pymongo>=4.6.0",
    "dnspython==2.8.0",

    # Security & Authentication
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "PyJWT==2.10.1",
    "cryptography==46.0.3",
    "python-dotenv==1.2.1",

    # Data Processing & Storage
    "pyiceberg==0.10.0",
    "fsspec==2025.12.0",
    "mmh3==5.2.0",
    "pyroaring==1.0.3",

    # Rate Limiting & Middleware
    "slowapi==0.1.9",
    "limits==5.6.0",

    # Monitoring & Logging
    "sentry-sdk==2.48.0",

    # Validation & Parsing
    "email-validator==2.3.0",
    "python-dateutil==2.9.0.post0",
    "strictyaml==1.7.3",
    "PyYAML==6.0.3",

    # Utilities
    "click==8.3.1",
    "typer==0.21.0",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "tenacity==9.1.2",
    "cachetools==6.2.4",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "Pygments==2.19.2",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",

    # Type Checking & Annotations
    "annotated-types==0.7.0",
    "typing_extensions==4.15.0",
    "typing-inspection==0.4.2",

    # Core Dependencies
    "six==1.17.0",
    "packaging==25.0",
    "sortedcontainers==2.4.0",
    "wrapt==2.0.1",
    "Deprecated==1.3.0",
    "deprecation==2.1.0",
    "StrEnum==0.4.15",

    # CFI & Low-level
    "cffi==2.0.0",
    "pycparser==2.23",

    # Async & Multidict
    "multidict==6.7.0",
    "propcache==0.4.1",
    "yarl==1.22.0",
]

[project.optional-dependencies]
dev = [
    # Code Formatting & Linting
    "black==25.12.0",
    "ruff==0.14.10",
    "mypy_extensions==1.1.0",

    # Testing
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",

    # Development Tools
    "fastapi-cli==0.0.20",
    "shellingham==1.5.4",
    "pathspec==0.12.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "iniconfig==2.3.0",
    "pyparsing==3.3.1",
    "pytokens==0.3.0",
    "rignore==0.7.6",
]

test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/notsolvablehat/healthcare-diabetes-dashboard"
Repository = "https://github.com/notsolvablehat/healthcare-diabetes-dashboard"
Issues = "https://github.com/notsolvablehat/healthcare-diabetes-dashboard/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Black Configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP" # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008"  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "supabase", "pymongo"]

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--showlocals"
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "diabetes-env/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
